@@ -22,8 +22,13 @@ module Heirloom
                                       :config => @config)
 
         @archive = Archive.new :name   => @opts[:name],
-                               :id     => id,
-                               :config => @config
+                               :config => @config,
+                               :id     => id
+
+        unless @opts[:bucket_prefix]
+          ensure_archive_exists :archive => @archive,
+                                :config  => @config
+        end
 
         # Lookup region & bucket_prefix from simpledb unless specified
         # To Do, valid validation message that simpledb exists
@@ -72,7 +77,7 @@ EOS
           opt :name, "Name of Heirloom.", :type => :string
           opt :output, "Path to output downloaded Heirloom. Must be existing directory.", :type => :string
           opt :region, "Region to download Heirloom.", :type    => :string,
-                                                      :default => 'us-west-1'
+                                                       :default => 'us-west-1'
           opt :secret, "Secret for ecrypted Heirloom.", :type => :string
           opt :secret_file, "Read secret from file.", :type  => :string,
                                                       :short => :none
