@@ -4,6 +4,7 @@
 * Removed git support.
 * Only setup existing buckets if forced.
 * Ensure valid bucket name and heirloom name on setup.
+* Return friendly error when bucket or heirloom does not exist.
 
 ## 0.8.3:
 
